Fix FV maincopy not expanding: stretch foreground, block wrap, 98% width at 320-425px.

--- a/mobile.css
+++ b/mobile.css
@@ -2900,24 +2900,27 @@
   }
 
   .home-page .fv-foreground {
-    align-items: flex-start;
+    align-items: stretch;
     width: 100%;
   }
 
   .home-page .fv-maincopy-wrap {
+    display: block;
+    flex: none;
     align-self: stretch;
-    width: 100%;
+    width: calc(100% - 2%);
     max-width: none;
-    padding-left: 1%;
-    padding-right: 1%;
+    margin-left: 1%;
+    margin-right: 1%;
+    padding: 0;
     box-sizing: border-box;
-    margin: 0;
   }
 
   .home-page .fv-maincopy {
     display: block;
     width: 100%;
     max-width: none;
+    min-width: 0;
     height: auto;
     margin: 0;
   }
